--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  continuation: circleci/continuation@0.1.4  # Import the Continuation Orb
+  continuation: circleci/continuation@0.1.4
 
 workflows:
   setup:
@@ -15,35 +15,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Check Condition for Continuation
-          command: |
-            # Check an environment variable or parameter (e.g., CONTINUE_PIPELINE)
-            if [ "${CONTINUE_PIPELINE}" = "true" ]; then
-              echo "Continuing pipeline..."
-              
-              # Generate the continuation configuration file dynamically
-              cat <<'EOF' > continuation-config.yml
-version: 2.1
-workflows:
-  continued-workflow:
-    jobs:
-      - print-message
-EOF
+          name: Print Message
+          command: echo "Triggering continuation with static config..."
+          # Use the Continuation Orb to continue the pipeline
+          continuation/continue:
+            configuration_path: continuation-config.yml
+            parameters: {}
 
-              # Display the content of the continuation config file
-              cat continuation-config.yml
-
-              # Use the Continuation Orb to continue the pipeline
-              circleci-agent step halt  # Halt this step before continuation
-            else
-              echo "Skipping continuation..."
-            fi
-
-      - continuation/continue:
-          configuration_path: continuation-config.yml  # Path to the dynamically generated continuation config
-          parameters: {}  # Optional: Add any continuation parameters if needed
-
-jobs:
   print-message:
     docker:
       - image: cimg/base:stable
